# udp-reliable-transfer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.bat  docker-compose.yml  docker-start.bat  docker-start.sh  docker-test.bat
devops/github/workflows/: ci.yml
scripts/: gen_sample.sh
src/: CMakeLists.txt
src/client/: main.c
src/common/: crc32.c  crc32.h  platform.h  protocol.c  protocol.h  util.c  util.h
src/server/: main.c
tests/libraries/: UdpTransferLibrary.py
tests/robot/: README.md  requirements.txt  run_tests.py  simple_test.robot  test_udp_transfer.robot
ui/: index.html  requirements.txt  script.js  server.py  start_ui.py  styles.css
